# Connect

./: LICENSE  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/cws/connect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/ConnectLib/: Android.hpp  Application.cpp  Application.hpp  Assert.hpp  Asset.hpp  AssetManager.hpp  AttributeLayout.cpp  AttributeLayout.hpp  Audio.cpp  Audio.hpp  AudioBackend.cpp  AudioBackend.hpp  AudioBufferQueue.cpp  AudioBufferQueue.hpp  AudioCore.cpp  AudioCore.hpp  AudioEffect.cpp  AudioEffect.hpp  AudioPlayer.cpp  AudioPlayer.hpp  AudioRecorder.cpp  AudioRecorder.hpp  AudioUris.hpp  BufferQueue.hpp  CMakeLists.txt  CircleBuffer.cpp  CircleBuffer.hpp  Clock.cpp  Clock.hpp  Common.hpp  ConditionVar.cpp  ConditionVar.hpp  DebugBreak.hpp  Display.cpp  Display.hpp  FileManager.cpp  FileManager.hpp  Geometry.hpp  Gfx.cpp  Gfx.hpp  (+37 more)
app/src/main/ConnectLib/android/: AndroidApplication.cpp  AndroidAsset.cpp  AndroidAssetManager.cpp  AndroidAudio.cpp  AndroidDisplay.cpp  AndroidInput.cpp  AndroidLauncher.cpp  AndroidLauncher.hpp  AndroidLogger.cpp  AndroidMain.cpp  AndroidNetworkBackend.cpp  AndroidNetworking.cpp  AndroidRenderBackend.cpp  AndroidRendering.cpp  AndroidThread.cpp  AndroidWindow.cpp
app/src/main/ConnectLib/audio_clips/: audio_clip_android.hpp  audio_clip_hello.hpp
app/src/main/ConnectLib/clips/: ClipAndroid.hpp  ClipHello.hpp
app/src/main/ConnectLib/shader/: SimpleShader.hpp
app/src/main/ConnectLib/shaders/: SimpleShader.cpp  SimpleShader.hpp
app/src/main/assets/: hello.glsl
app/src/main/cpp/: Activity.cpp  Activity.hpp  App.cpp  App.hpp  Application.cpp  Application.hpp  Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  CircleBuffer.hpp  Clock.hpp  ConditionVar.cpp  ConditionVar.hpp  Display.cpp  Display.hpp  File.cpp  File.hpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Mutex.cpp  Mutex.hpp  Profiler.cpp  Profiler.hpp  RenderContext.cpp  RenderContext.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  Types.hpp  main.cpp  native_interface.cpp
app/src/main/java/com/cws/connect/: AudioConfig.kt  JniUtil.kt  MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/cws/connect/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
